[metadata]
name = vagrant-ansible-provisioner
version = 0.1.0

[options]
packages =
    vagrant_ansible_provisioner
    vagrant_ansible_provisioner.commands

[options.entry_points]
console_scripts =
    vagrant-ansible-provisioner = vagrant_ansible_provisioner.cli:run

[flake8]
max-line-length = 120
exclude = .git,__pycache__,.venv
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
exclude = .venv

[mypy-setuptools]
ignore_missing_imports = True

[coverage:run]
branch = True
relative_files = True
