[metadata]
name = vagrant-ansible-provisioner
version = 0.1.0

[options]
install_requires =
    termcolor

[options.entry_points]
console_scripts =
    vagrant-ansible-provisioner = vagrant_ansible_provisioner.cli:run

[flake8]
max-line-length = 120
exclude = .git,__pycache__,.venv
extend-ignore =
    # See https://github.com/PyCQA/pycodestyle/issues/373
    E203,

[mypy]
python_version = 3.9
warn_return_any = True
warn_unused_configs = True
exclude = .venv
warn_redundant_casts = True
disallow_untyped_decorators = True
disallow_untyped_defs = True
check_untyped_defs = True
no_implicit_optional = True

[mypy-tests.*]
disallow_untyped_defs = False
check_untyped_defs = False

[mypy-setuptools]
ignore_missing_imports = True

[coverage:run]
branch = True
relative_files = True
